# G-Bot

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  flake8.ini  pycodestyle  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
pywalrus/: __init__.py  contact.py  inbox.py  message.py  walrus.py
src/ghbot/: bot.py  cli.py
tests/unit/: test_contact.py  test_inbox.py  test_message.py  test_walrus.py
